# ModelForge

./: .gitignore  .readthedocs.yaml  CODE_OF_CONDUCT.md  LICENSE  README.md  REFACTORING_DOCUMENTATION.md  REFACTORING_SUMMARY.md  docker-compose.yml  mkdocs.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/agents/: documentation_agent.md  feature_plan_agent.md  my-agent.md  test_agent.md
.github/workflows/: workflow.yaml
FastAPI_server/: .dockerignore  Dockerfile  app.py  docker_requirements.txt  entry_script.sh  requirements.txt
FastAPI_server/globals/: globals.py  globals_instance.py
FastAPI_server/routers/: finetuning_router.py  playground_router.py
FastAPI_server/static/css/: detect_hardware.css  landing.css  styles.css
FastAPI_server/static/js/: detect_hardware.js  landing.js
FastAPI_server/templates/: base.html  detect_hardware.html  finetuning_settings.html  landing.html
FastAPI_server/test_datasets/: med_construction.jsonl  question_answer-train-data-sample.jsonl
FastAPI_server/tests/: LLMFinetuner.py  finetuning_test.py
FastAPI_server/training_logs/: events.out.tfevents.1743465511.Griffin-OS.13528.0  events.out.tfevents.1743468512.Griffin-OS.5180.0  events.out.tfevents.1743469449.Griffin-OS.25120.0  events.out.tfevents.1743787354.Griffin-OS.16456.0  events.out.tfevents.1743793931.Griffin-OS.9868.0  events.out.tfevents.1743794201.Griffin-OS.18012.0  events.out.tfevents.1743794663.Griffin-OS.18824.0  events.out.tfevents.1743795182.Griffin-OS.2076.0  events.out.tfevents.1743795439.Griffin-OS.2076.1  events.out.tfevents.1743796655.Griffin-OS.2076.2  events.out.tfevents.1743797564.Griffin-OS.29968.0  events.out.tfevents.1743797648.Griffin-OS.29968.1  events.out.tfevents.1743805232.Griffin-OS.20808.0
FastAPI_server/utilities/: CausalLLMTuner.py  DBManager.py  Finetuner.py  LLMFinetuner.py  QuestionAnsweringTuner.py  Seq2SeqLMTuner.py  chat_llm.py  chat_playground.py  chat_seq2seq.py  finetuner_settings.py  hardware_detector.py  settings_builder.py
FastAPI_server/utilities/tests/: data_load_test.py
FastAPI_server/wandb/run-20250330_100827-k7vjnhch/: run-k7vjnhch.wandb
Frontend/: Dockerfile  package-lock.json  package.json  tailwind.config.js
Frontend/public/: index.html
Frontend/src/: App.css  App.js
Frontend/src/components/: ErrorDialog.jsx  Navbar.jsx  PushToHubForm.jsx
Frontend/src/pages/: AppLanding.jsx  DetectHardwarePage.jsx  FinetuningSettingsPage.jsx  LandingPage.jsx  ListAllModels.jsx  ListModels.jsx  Loading.jsx  TechnicalDetailsPage.jsx
Frontend/src/services/: api.js
Frontend/src/styles/: LandingPage.css  Loading.css
ModelForge/: MANIFEST.in  app.py  cli.py
ModelForge/model_configs/: README.md  high_end.json  low_end.json  mid_range.json
ModelForge/routers/: finetuning_router.py  models_router.py
ModelForge/services/: training_service.py
ModelForge/strategies/: qlora_strategy.py  sft_strategy.py
ModelForge/test_datasets/: med_text_generation.jsonl  test_financial_advisory_generation.jsonl  test_financial_advisory_generation_bak.jsonl
ModelForge/utilities/: CausalLLMTuner.py  QuestionAnsweringTuner.py  Seq2SeqLMTuner.py  chat_playground.py  config_manager.py  hardware_detector.py  hardware_detector_factory.py  model_recommendation.py  settings_builder.py
ModelForge/utilities/configs/: models.json
ModelForge/utilities/finetuning/: CausalLLMTuner.py  QuestionAnsweringTuner.py  Seq2SeqLMTuner.py
docs/: README.md  requirements.txt
docs/api-reference/: responses.md  rest-api.md  training-config.md
docs/configuration/: configuration-guide.md  dataset-formats.md  hardware-profiles.md  training-tasks.md
docs/contributing/: architecture.md  contributing.md  development.md  model-configs.md
docs/getting-started/: quickstart.md  whats-new.md
docs/installation/: linux.md  macos.md  post-installation.md  windows.md
docs/providers/: custom-providers.md  huggingface.md  overview.md  unsloth.md
docs/strategies/: custom-strategies.md  dpo.md  overview.md  qlora.md  rlhf.md  sft.md
docs/troubleshooting/: common-issues.md  faq.md  performance.md  windows-issues.md
modelforge_finetuning.egg-info/: PKG-INFO
nginx/: nginx.conf
(+17 files in other folders)
