[project]
name = "modelforge"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "absl-py==2.2.1",
    "accelerate==1.5.2",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.11.14",
    "aiosignal==1.3.2",
    "annotated-types==0.7.0",
    "anyio==4.9.0",
    "attrs==25.3.0",
    "bitsandbytes==0.45.3",
    "certifi==2025.1.31",
    "charset-normalizer==3.4.1",
    "click==8.1.8",
    "colorama==0.4.6",
    "datasets==3.5.0",
    "dill==0.3.8",
    "docker-pycreds==0.4.0",
    "dotenv>=0.9.9",
    "dpcpp-cpp-rt==2025.0.4",
    "fastapi==0.115.12",
    "filelock==3.18.0",
    "frozenlist==1.5.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "grpcio==1.71.0",
    "h11==0.14.0",
    "huggingface-hub==0.30.2",
    "idna==3.10",
    "inquirerpy==0.3.4",
    "intel-cmplr-lib-rt==2025.0.4",
    "intel-cmplr-lib-ur==2025.0.4",
    "intel-cmplr-lic-rt==2025.0.4",
    "intel-opencl-rt==2025.0.4",
    "intel-openmp==2025.0.4",
    "intel-sycl-rt==2025.0.4",
    "jinja2==3.1.6",
    "markdown==3.7",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "mdurl==0.1.2",
    "mkl==2025.0.1",
    "mkl-dpcpp==2025.0.1",
    "mpmath==1.3.0",
    "multidict==6.2.0",
    "multiprocess==0.70.16",
    "networkx==3.4.2",
    "numpy==2.2.4",
    "nvidia-ml-py==12.570.86",
    "onemkl-sycl-blas==2025.0.1",
    "onemkl-sycl-datafitting==2025.0.1",
    "onemkl-sycl-dft==2025.0.1",
    "onemkl-sycl-lapack==2025.0.1",
    "onemkl-sycl-rng==2025.0.1",
    "onemkl-sycl-sparse==2025.0.1",
    "onemkl-sycl-stats==2025.0.1",
    "onemkl-sycl-vm==2025.0.1",
    "packaging==24.2",
    "pandas==2.2.3",
    "peft==0.15.1",
    "pfzy==0.3.4",
    "pillow==11.0.0",
    "platformdirs==4.3.7",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.1",
    "protobuf==5.29.4",
    "psutil==7.0.0",
    "pyarrow==19.0.1",
    "pydantic==2.11.1",
    "pydantic-core==2.33.0",
    "pygments==2.19.1",
    "pynvml==12.0.0",
    "python-dateutil==2.9.0.post0",
    "python-multipart==0.0.20",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "regex==2024.11.6",
    "requests==2.32.3",
    "rich==13.9.4",
    "ruamel-yaml==0.18.10",
    "ruamel-yaml-clib==0.2.12",
    "safetensors==0.5.3",
    "sentencepiece>=0.2.0",
    "sentry-sdk==2.24.1",
    "setproctitle==1.3.5",
    "setuptools==78.1.0",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "starlette==0.46.1",
    "sympy==1.13.1",
    "tbb==2022.1.0",
    "tcmlib==1.2.0",
    "tensorboard==2.19.0",
    "tensorboard-data-server==0.7.2",
    "tokenizers==0.21.1",
    "tqdm==4.67.1",
    "transformers==4.51.3",
    "trl==0.16.0",
    "typing-extensions==4.13.0",
    "typing-inspection==0.4.0",
    "tzdata==2025.2",
    "umf==0.9.1",
    "urllib3==2.3.0",
    "uvicorn==0.34.0",
    "wcwidth==0.2.13",
    "werkzeug==3.1.3",
    "xxhash==3.5.0",
    "yarl==1.18.3",
]
